add_subdirectory(actionlib)
add_subdirectory(actionlib_msgs)
add_subdirectory(actionlib_tutorials)
add_subdirectory(audio_common_msgs)
add_subdirectory(base_local_planner)
add_subdirectory(bond)
add_subdirectory(control_msgs)
add_subdirectory(costmap_2d)
add_subdirectory(diagnostic_msgs)
add_subdirectory(driver_base)
add_subdirectory(dynamic_reconfigure)
add_subdirectory(frontier_exploration)
add_subdirectory(gazebo_msgs)
add_subdirectory(geometry_msgs)
add_subdirectory(laser_assembler)
add_subdirectory(map_msgs)
add_subdirectory(move_base_msgs)
add_subdirectory(nav_msgs)
add_subdirectory(navfn)
add_subdirectory(nodelet)
add_subdirectory(pcl_msgs)
add_subdirectory(polled_camera)
add_subdirectory(roscpp)
add_subdirectory(roscpp_tutorials)
add_subdirectory(rosgraph_msgs)
add_subdirectory(rospy_tutorials)
add_subdirectory(sensor_msgs)
add_subdirectory(shape_msgs)
add_subdirectory(smach_msgs)
add_subdirectory(std_msgs)
add_subdirectory(std_srvs)
add_subdirectory(stereo_msgs)
add_subdirectory(tf)
add_subdirectory(tf2_msgs)
add_subdirectory(theora_image_transport)
add_subdirectory(topic_tools)
add_subdirectory(trajectory_msgs)
add_subdirectory(turtle_actionlib)
add_subdirectory(turtlesim)
add_subdirectory(visualization_msgs)
